--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -13,7 +13,7 @@
   &__player {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 0.7fr 1fr 0.7fr;
+    grid-template-columns: auto 1fr auto;
 
     align-items: center;
 
@@ -50,10 +50,14 @@
 
       .bar {
         background: $white;
-        width: 100%;
+        width: 85%;
         height: 5px;
         border-radius: 12px;
         cursor: pointer;
+
+        @media #{$tab-port-up} {
+          width: 70%;
+        }
 
         &__thumb {
           border-radius: 12px;
@@ -82,6 +86,10 @@
           }
         }
       }
+    }
+
+    div {
+      // border: 1px solid red;
     }
 
     .other {
