--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,15 +1,15 @@
 // main sass file
 
 // BASE
-@import "src/sass/base/_variables";
-@import "src/sass/base/_mixins";
-@import "src/sass/base/_globals";
+@import "base/_variables";
+@import "base/_mixins";
+@import "base/_globals";
 
 // COMPONENTS
 
 // LAYOUT
-@import "src/sass/layout/_container";
-@import "src/sass/layout/_aside";
-@import "src/sass/layout/_header";
-@import "src/sass/layout/_playlist";
-@import "src/sass/layout/_footer";
+@import "layout/_container";
+@import "layout/_aside";
+@import "layout/_header";
+@import "layout/_playlist";
+@import "layout/_footer";
