--- a/src/sass/base/_globals.scss
+++ b/src/sass/base/_globals.scss
@@ -5,59 +5,43 @@
   padding: 0;
   box-sizing: inherit;
 }
-
 html {
-  font-size: 62.5%;
+  // font-size: 62.5%;
   scroll-behavior: smooth;
 
-  // change of font size
-  @media #{$phone-down} {
-    //300px
-    // font-size: 1rem;
-  }
-  @media #{$phone-up} {
-    //300px
-    font-size: 1rem;
-  }
+  // @media #{$phone-up} {
+  //   //300px
+  //   font-size: 1rem;
+  // }
 
-  @media #{$tab-up} {
-    //600px
-    font-size: 1.1rem;
-  }
+  // @media #{$tab-up} {
+  //   //600px
+  //   font-size: 1.1rem;
+  // }
 
-  @media #{$laptop-up} {
-    //1200px
-    font-size: 1.3rem;
-  }
+  // @media #{$laptop-up} {
+  //   //1200px
+  //   font-size: 1.3rem;
+  // }
 
-  @media #{$desktop-up} {
-    //1800px
-    font-size: 1.5rem;
-  }
+  // @media #{$desktop-up} {
+  //   //1800px
+  //   font-size: 1.5rem;
+  // }
 }
-
 body {
   box-sizing: border-box;
-    overflow-x: hidden;
+  overflow-x: hidden;
   color: $white;
-
   font-family: 'Poppins', sans-serif;
-
 }
 
-ul {
-  list-style: none;
-}
+ul { list-style: none;}
 
-li {
-  display: inline-block;
-}
+li {display: inline-block;}
 
 a {
   text-decoration: none;
   display: inline-block;
 }
-
-.white-space-no-wrap {white-space: nowrap;}
-
 img{user-select: none;}
