--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -1,11 +1,8 @@
 .aside {
   padding: 1rem 0;
-
-  position: fixed;
+  @include position($position: fixed, $top: 0, $left: -100%);
   height: 100%;
   width: 50%;
-  top: 0;
-  left: -100%;
   z-index: 9999;
   transition: all 0.3s;
   background: $black-linear-gradient;
@@ -19,10 +16,9 @@
     font-size: 120%;
   }
 
-  @media #{$tab-port-up} {
+  @media #{$md-xl} {
     position: static;
     width: auto;
-
     grid-row: 1/3;
   }
 
@@ -31,11 +27,7 @@
     padding-top: 6rem;
 
     ul {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: .8rem;
-    
+      @include flex($direction: column, $align: center, $gap: .8rem);  
       li a{
         font-weight: 300;
         color:$grey;
@@ -45,27 +37,17 @@
           color: white;
           transform: scale(1.1);
         }
-
       }
     }
     
     .menu-icon {
-      position: fixed;
-      left: 1%;
-      top: 2%;
+      @include position($position: fixed, $left: 1%, $top: 2%);
       z-index: 9999;
       cursor: pointer;
-
-      @media #{$tab-port-up} {
-        display: none;
-      }
+      @media #{$md-xl} {display: none;}
     }
-
     #plus{color: $primary; font-weight: 600;}
-
   }
 }
     
-.aside-active {
-  left: 0;
-}
+.aside-active {left: 0;}
