--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,7 +5,7 @@
   padding-block: 1rem;
   padding-inline: 0.5rem;
 
-  @media #{$tab-port-up} {
+  @media #{$md-xl} {
     grid-column: 1/4;
     padding-inline: 1rem;
   }
@@ -14,40 +14,27 @@
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: auto 1fr auto;
-
     align-items: center;
-
     width: 100%;
     height: 100%;
 
     .player__info {
-      img {
-        width: 100px;
-      }
+      img { width: 100px;}
 
-      p {
-        font-weight: 300;
-      }
+      p {font-weight: 300;}
+
       #title {
         font-weight: 700;
         opacity: 0;
       }
 
-      .band {
-        opacity: 0;
-      }
+      .band {opacity: 0;}
     }
 
-    audio {
-      display: none;
-    }
+    audio {display: none;}
 
     .music {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.8rem;
-
+      @include flex($direction: column, $align: center, $gap: 0.8rem);
       .bar {
         background: $white;
         width: 85%;
@@ -55,9 +42,7 @@
         border-radius: 12px;
         cursor: pointer;
 
-        @media #{$tab-port-up} {
-          width: 70%;
-        }
+        @media #{$md-xl} {width: 70%;}
 
         &__thumb {
           border-radius: 12px;
@@ -67,10 +52,7 @@
         }
       }
       .controls {
-        display: flex;
-        justify-content: space-around;
-        gap: 1rem;
-
+        @include flex($justify: space-around, $align: null, $gap: 1rem);
         width: auto;
 
         button {
@@ -81,15 +63,9 @@
           font-size: 150%;
           text-shadow: 4px 4px #0c1530;
 
-          &:active {
-            transform: scale(0.8);
-          }
+          &:active {transform: scale(0.8);}
         }
       }
-    }
-
-    div {
-      // border: 1px solid red;
     }
 
     .other {
@@ -105,14 +81,9 @@
         text-shadow: 4px 4px #0c1530;
         padding: 0.2rem;
 
-        &:active {
-          transform: scale(0.9);
-        }
+        &:active {transform: scale(0.9);}
       }
-
-      .repeat-active {
-        color: $primary;
-      }
+      .repeat-active {color: $primary;}
     }
   }
 }
