--- a/src/sass/layout/_playlist.scss
+++ b/src/sass/layout/_playlist.scss
@@ -16,7 +16,11 @@
 
     img{width: 15%;}
 
-    &:not(:nth-of-type(1)) {&:hover { background: $blue;}}
+    &:not(:nth-of-type(1)) {&:hover {
+       background: $blue;
+       text-shadow: 2px 3px rgb(14, 14, 14);
+       color: $primary;
+      }}
 
     p {
       flex-grow: 1;
@@ -32,5 +36,11 @@
         color: $primary;
       }
     }
+    
+  }
+  .song-active{
+    text-shadow: 2px 3px rgb(14, 14, 14);
+    color: $primary;
+    background: $blue;
   }
 }
